<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".visao.login.LoginActivity" >
    <LinearLayout
        android:id="@+id/formLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtSenhaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp">

            <EditText
                android:id="@+id/txtSenha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:password="true"/>

        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/login"
            android:clickable="true"
            android:onClick="realizarLogin"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naoCadastrado"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:onClick="cadastrarUsuario"/>
</RelativeLayout>