<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0px"
    android:paddingLeft="5px"
    android:paddingRight="5px"
    android:paddingTop="5px"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".visao.usuario.CadastroUsuario"
    tools:showIn="@layout/activity_cadastro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="35dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/labelNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"/>

            <android.support.design.widget.TextInputLayout
                                android:id="@+id/txtNomeLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/labelNome">

                <EditText
                        android:id="@+id/txtNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:id="@+id/labelEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtNomeLayout"
                    android:text="@string/email"/>

            <android.support.design.widget.TextInputLayout
                                    android:id="@+id/txtEmailLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/labelEmail">

                        <EditText
                                android:id="@+id/txtEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                    android:id="@+id/labelSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/senha"
                    android:layout_below="@+id/txtEmailLayout"/>

            <android.support.design.widget.TextInputLayout
                            android:id="@+id/txtSenhaLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/labelSenha">

                            <EditText
                                    android:id="@+id/txtSenha"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:id="@+id/labelSenhaConfirmacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/senhaConfirmacao"
                    android:layout_below="@+id/txtSenhaLayout"/>

            <android.support.design.widget.TextInputLayout
                                            android:id="@+id/txtSenhaConfirmacaoLayout"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_below="@+id/labelSenhaConfirmacao">

                        <EditText
                                    android:id="@+id/txtSenhaConfirmacao"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPassword"/>

             </android.support.design.widget.TextInputLayout>
      </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="chamarTelaLogin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:layout_weight="1"
            android:clickable="true"
            android:id="@+id/btnCadastrarAtualizar"
            android:onClick="cadastrarUsuario"/>

    </LinearLayout>


</RelativeLayout>
